Fix T101721: Knife project crashes

The crash was caused by [0] however knife-project functionality has been
incorrect since [1] which would loop over each edit-mode object and run
the knife project function which operated on all edit-mode objects too.

- Resolve the crash by postponing face-tessellation recalculation
  until the knife tool has cut all objects

- Objects occluding each other is now supported
  (an old TODO and something that was never supported).

[0]: 690ecaae208d5f72217c165621d0d036e4029e86
[1]: 6e77afe6ec7b6a73f218f1fef264758abcbc778a